--- a/style.css
+++ b/style.css
@@ -2,10 +2,20 @@
 a{text-decoration: none;}
 kbd{
   border: 1px solid red;
-  width: 2em;
-  height: 2em;
+  width: 4em;
+  height: 4em;
   display: inline-block;
   text-transform: uppercase;
+  position: relative;
+}
+kbd > button{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: none;
+}
+kbd:hover > button{
+  display: inline-block;
 }
 main {
   text-align:center;
@@ -14,9 +24,9 @@ main {
   display: inline-block;
 }
 #jiju > div:nth-child(2){
-  margin-left: 1em;
+  margin-left: 2em;
 }
 #jiju > div:nth-child(3){
-  margin-left: 2em;
+  margin-left: 4em;
 }
 
