--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-*{margin: 0;padding: 0;}
-a{text-decoration: none;}
-kbd{
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+kbd {
   border: 1px solid red;
   width: 4em;
   height: 4em;
@@ -8,44 +15,56 @@ kbd{
   text-transform: uppercase;
   position: relative;
 }
-kbd > button{
+
+kbd>button {
   position: absolute;
   right: 0;
   bottom: 0;
   display: none;
+  border: 1px solid white;
+  border-radius: 4px;
+  background: white;
 }
-kbd:hover > button{
+
+kbd:hover>button {
   display: inline-block;
 
 }
-body{
+
+body {
   background: url(./wall2.jpg) rgb(197, 190, 190) no-repeat center center;
   background-size: cover;
 }
+
 main {
-  text-align:center;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
+
 #main {
   display: inline-block;
 }
-#main > div:nth-child(2){
+
+#main>div:nth-child(2) {
   margin-left: -22px;
 }
-#main > div:nth-child(3){
+
+#main>div:nth-child(3) {
   margin-left: -80px;
 }
-.wrapper{
+
+.wrapper {
   background: rgba(255, 255, 255, 0.1);
-  border-radius: 10px; 
+  border-radius: 10px;
 }
-.key{
+
+.key {
   width: 50px;
   height: 40px;
-  background: linear-gradient(to bottom, #292929 0%,#111111 100%);
+  background: linear-gradient(to bottom, #292929 0%, #111111 100%);
   border: 1px solid #373737;
   color: #c5c5c5;
   border-radius: 6px;
@@ -54,22 +73,25 @@ main {
   font-family: keyboard, "Arial Rounded", Helvetica, Arial, sans-serif;
   position: relative;
 }
-.row{
+
+.row {
   margin: 20px;
 }
-.row .key{
+
+.row .key {
   margin: 0 10px;
 }
-.key img{
+
+.key img {
   width: 16px;
   height: 16px;
   position: absolute;
   left: 4px;
   bottom: 2px;
 }
-.key .text{
+
+.key .text {
   position: absolute;
   left: 4px;
   top: 2px;
 }
-
